cmake_minimum_required(VERSION 3.21)
project(OtobusBilgiSistemii)

set(CMAKE_CXX_STANDARD 14)

add_executable(OtobusBilgiSistemii main.cpp Veri.cpp Veri.h tanimlar.h Veri/IsletmeBilgileri.cpp Veri/IsletmeBilgileri.h Veri/OtobusBilgileri.cpp Veri/OtobusBilgileri.h Veri/Insan.cpp Veri/Insan.h Veri/SeferBilgileri.cpp Veri/SeferBilgileri.h Veri/SeyahatBilgileri.cpp Veri/SeyahatBilgileri.h Veri/YolcuBilgileri.cpp Veri/YolcuBilgileri.h Veri/CalisanBilgileri.cpp Veri/CalisanBilgileri.h nesne_depolari/nesne_deposu.h nesne_depolari/IsletmeBilgileriDeposu.cpp nesne_depolari/IsletmeBilgileriDeposu.h nesne_depolari/OtobusBilgileriDeposu.cpp nesne_depolari/OtobusBilgileriDeposu.h nesne_depolari/SeferBilgileriDeposu.cpp nesne_depolari/SeferBilgileriDeposu.h nesne_depolari/SeyahatBilgileriDeposu.cpp nesne_depolari/SeyahatBilgileriDeposu.h nesne_depolari/YolcuBilgileriDeposu.cpp nesne_depolari/YolcuBilgileriDeposu.h nesne_depolari/CalisanBilgileriDeposu.cpp nesne_depolari/CalisanBilgileriDeposu.h)
